2004-02-06  Karl Berry  <karl@gnu.org>

	* config.charset: update from gettext 0.14.1.

2004-02-05  Paul Eggert  <eggert@twinsun.com>

	Add comments and code, prompted by suggestions from Bruno Haible
	for sh-quote.
	* quotearg.h (quotearg_alloc): New decl.  Improve the comments
	describing the enum quoting_style values.
	* quotearg.c (quotearg_alloc): New function.
	(quotearg_buffer_restyled): Treat lone { and } as special.
	Treat = as special.  Work around bug with older shells
	that "see" a '\' that is really the 2nd byte of a multibyte char.
	Quote empty string with shell_quoting_style.

2004-02-03  Bruno Haible  <bruno@clisp.org>

	* pipe.h: New file, from GNU gettext.
	* pipe.c: New file, from GNU gettext.

2004-01-27  Bruno Haible  <bruno@clisp.org>

	* execute.h: New file, from GNU gettext.
	* execute.c: New file, from GNU gettext.
	* w32spawn.h: New file, from GNU gettext.

2004-01-23  Paul Eggert  <eggert@twinsun.com>

	Exit-status fix from coreutils.

	Use exit_failure consistently in place of EXIT_FAILURE,
	so that program exit statuses are consistent on failure.

	* argmatch.c (ARGMATCH_DIE) [! defined ARGMATCH_DIE]:
	Include "exitfail.h", and use exit_failure rather than EXIT_FAILURE.
	* argmatch.h: Comment fix to match the above.
	* obstack.c (obstack_exit_failure) [!defined _LIBC]:
	Now a macro referring to exit_failure, instead of a separate
	variable.  Include "exitfail.h" to get it.
	* xstrtol.h: Include "exitfail.h".
	(STRTOL_FATAL_ERROR): Exit with status exit_failure, not 2.

	* long-options.c (parse_long_options): Use prototype
	for usage function arg.  Pass it EXIT_SUCCESS rather than 0,
	for clarity.

2004-01-21  Jim Meyering  <jim@meyering.net>

	* mktime.c (__mktime_internal) [!_LIBC]: Define to mktime_internal
	so as not to conflict with a different-sized __mktime_internal
	function in GNU libc.
	* timegm.c (__mktime_internal) [!_LIBC]: Likewise.
	Problem building statically-linked `ls' reported by Michael Brunnbauer.
